overflow fix

--- a/frontend/kalunwa-web-app/src/app/admin/components/admin-template/admin-template.component.scss
+++ b/frontend/kalunwa-web-app/src/app/admin/components/admin-template/admin-template.component.scss
@@ -1,3 +1,8 @@
 .mat-drawer-container{
   height:100%;
+  overflow-y:scroll !important;
+  .mat-drawer-content{
+    overflow-y:scroll !important;
+    background-color: #e4e4e4;
+  }
 }
